@@ -8,17 +8,17 @@ use Test::More tests => 35;
 use Test::Mojo;
 
 use TestHelper;
- 
-my $error_checker = sub { 
+
+my $error_checker = sub {
     my ($self, %options) = @_;
     my $reply  = 'No error';
 
     eval { $self->digest_auth(%options) };
-    if($@) {	    
-	$reply = $@;		
-	$self->res->code(500);
+    if($@) {
+        $reply = $@;
+        $self->res->code(500);
     }
-    
+
     $self->render(text => $reply);
 };
 
@@ -27,7 +27,7 @@ plugin 'digest_auth';
 
 get '/no_allow' => sub { $error_checker->(shift) };
 get '/unsupported_qop' => sub { $error_checker->(shift, allow => users(), qop => 'huh?') };
-get '/unsupported_algorithm' => sub { $error_checker->(shift, allow => users(), algorithm => '3DES') };    
+get '/unsupported_algorithm' => sub { $error_checker->(shift, allow => users(), algorithm => '3DES') };
 get '/MD5-sess_no_qop' => sub { $error_checker->(shift, allow => users(), algorithm => 'MD5-sess', qop => '') };
 
 my $t = Test::Mojo->new;
@@ -60,7 +60,7 @@ $t->get_ok('/test_defaults')
   ->content_isnt("You're in!");
 
 # Belongs here?
-# By default support_broken_browsers = 1 
+# By default support_broken_browsers = 1
 $t->get_ok('/test_defaults?a=b')
   ->status_is(401);
 $t->get_ok('/test_defaults?a=b', { %{build_auth_request($t->tx)}, 'User-Agent' => IE6 })
@@ -69,16 +69,16 @@ $t->get_ok('/test_defaults?a=b', { %{build_auth_request($t->tx)}, 'User-Agent' =
 ####
 
 get '/test_defaults_overridden' => create_action(realm     => 'MD5-sess Realm',
-						 domain    => 'example.com,dev.example.com',
-						 algorithm => 'MD5-sess');
-							                  
-$t->get_ok('/test_defaults_overridden')    
+                                                 domain    => 'example.com,dev.example.com',
+                                                 algorithm => 'MD5-sess');
+
+$t->get_ok('/test_defaults_overridden')
   ->status_is(401)
   ->header_like('WWW-Authenticate', qr/realm="MD5-sess Realm"/)
   ->header_like('WWW-Authenticate', qr/domain="example.com,dev.example.com"/)
   ->header_like('WWW-Authenticate', qr/algorithm=MD5-sess/);
 
 get '/test_no_qop' => create_action(qop => '');
-$t->get_ok('/test_no_qop')    
+$t->get_ok('/test_no_qop')
   ->status_is(401)
-  ->header_unlike('WWW-Authenticate', qr/qop="\w+"/);   
+  ->header_unlike('WWW-Authenticate', qr/qop="\w+"/);
