@@ -1,4 +1,9 @@
 -------------------------
+2012-12-07	v0.05	
+-------------------------
+* Fixed implicit return causing digest_auth to always return true in Mojolicious ~3.6X
+
+-------------------------
 2012-09-13	v0.04	
 -------------------------
 * Removed some methods from Util used for Mojo::Util backwards compatibility
